<resources>
    <string name="app_version">Version 2.5</string>
    <string name="title_profile">Taxi Near Driver</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_redeem">Payout</string>
    <string name="title_payment">Deposit</string>
    <string name="title_trans_history">Transaction Histories</string>
    <string name="title_trip_history">Trip Histories</string>
    <string name="ic_header_cirle_full">&#xf111;</string>
    <string name="ic_header_cirle">&#xf10c;</string>
    <string name="tel">tel:</string>
    <string name="lbl_redeem_information">Redeem Information &#xf18e;</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_cancel_trip">CANCEL TASK</string>
    <string name="lbl_begin_trip">BEGIN TASK</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="lbl_browse">BROWSE</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_update">UPDATE</string>
    <string name="lbl_send">SEND</string>
    <string name="lbl_end_trip">END TASK</string>
    <string name="lbl_contiune">Continue</string>
    <string name="lbl_arrived">Arrived</string>
    <string name="lbl_arrived_a">Arrived A</string>
    <string name="lbl_arrived_b">Tasker arrived B</string>
    <string name="lblBeginTask">Tasker on Task</string>
    <string name="lbl_driver_arrived">Tasker arrived A</string>
    <string name="lbl_paypal">PayPal</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_in_process">In process</string>
    <string name="lbl_on_the_trip">On the trip</string>
    <string name="lblTaskerArrivingB">Tasker arriving B</string>
    <string name="lblArrivingB">Arriving B</string>
    <string name="lbl_contact_help"></string>
    <string name="lbl_link_contact_help"></string>
    <string name="currency">USD</string>
    <string name="unit_measure">Km</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_credit_cart_infomation">Credit cart information</string>
    <string name="lbl_redit_cart">Credit Cart</string>
    <string name="lbl_secure_code">Secure Code</string>
    <string name="lbl_rating_driver">Your task get</string>
    <string name="lbl_trip_passenger">Your task need</string>
    <string name="lbl_trip_driver">You earn from this task</string>
    <string name="lbl_id_driver">Id Tasker</string>
    <string name="lbl_name_passenger">Customer Tasker</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_start">Start:</string>
    <string name="lbl_end">End:</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_car_plate">Car Plate:</string>
    <string name="lbl_car_plate_hint">Car Plate</string>
    <string name="lbl_plate">Plate</string>
    <string name="lbl_identity">Identity</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_phone_passenger">Customer phone</string>
    <string name="lbl_promotion">Promotion</string>
    <string name="lbl_trip_history">Tasks Histories</string>
    <string name="lbl_order_confirm">Order Confirmed</string>
    <string name="lbl_payment_history">Histories</string>
    <string name="lbl_payment_transfer">Select Account</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_paynow">Pay Now</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_title_start_trip">Start Task Now</string>
    <string name="lbl_title_your_trip">Your Task</string>
    <string name="lbl_online">ONLINE</string>
    <string name="lbl_offline">OFFLINE</string>
    <string name="lbl_register_as_driver">As Tasker</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_request_car">Request Task</string>
    <string name="lbl_find_car">Find 5 car in 3.000m radius</string>
    <string name="btn_book">Book</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="lbl_from">A</string>
    <string name="lbl_to">B</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_google">Google Plus</string>
    <string name="lbl_share_speak_driver">Share to get $50 for takser</string>
    <string name="lbl_share_speak_customer">or $20 for customer</string>
    <string name="lbl_share_1">Share to get $ for tasker and customer</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_bank_accout">Bank Account</string>
    <string name="lbl_document">Document</string>
    <string name="lblTypeCar">Task Type</string>
    <string name="lblJobCar">Task Type</string>
    <string name="lbl_you_can_login">You can login with Facebook, Google+</string>
    <string name="lbl_Facebook_Google">with Facebook, Google+</string>
    <string name="lbl_payout">Payout</string>
    <string name="lbl_avatar">Avatar</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_request_link1">Request Link</string>
    <string name="lbl_guide">You can online to ready working as a tasker</string>
    <string name="email_is_not_validated">Email is not validated</string>
    <string name="register_success">Register Success</string>
    <string name="update_profile_success">Update Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="action_cancellation_order_fee">CANCELLATION_ORDER_FEE</string>
    <string name="action_exchange_point">EXCHANGE_POINT</string>
    <string name="action_redeem_point">REDEEM_POINT</string>
    <string name="action_transfer_point">TRANSFER_POINT</string>
    <string name="action_trip_payment">TRIP_PAYMENT</string>
    <string name="action_passenger_share_bonus">PASSENGER_SHARE_BONUS</string>
    <string name="action_driver_share_bonus">DRIVER_SHARE_BONUS</string>
    <string name="msg_quit_app">Do you want to quit app?</string>
    <string name="msg_offline">Do you want to offline?</string>
    <string name="msg_logout">Do you want to logout?</string>
    <string name="msg_language">Do you want to change language ?</string>
    <string name="msg_do_you_cancel">Do you want to cancel</string>
    <string name="msg_check_net_work">Please check the network!</string>
    <string name="is_payment_diff">Is payment different from the actual amount?</string>
    <string name="enter_total_amount">Enter Total Received Amount</string>
    <string name="lbl_english">English</string>
    <string name="lbl_chinese">中文</string>
    <string name="content_description">Content Description</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_file_pdf_o">&#xf1c1;</string>
    <string name="fa_calendar_o">&#xf133;</string>
    <string name="fa_user_secret">&#xf21b;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="ic_star">&#xf005;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_home">&#xf015;</string>
    <string name="ic_payment">&#xf0d6;</string>
    <string name="ic_promotion">&#xf0a3;</string>
    <string name="ic_share">&#xf1e0;</string>
    <string name="ic_help">&#xf059;</string>
    <string name="ic_history">&#xf1da;</string>
    <string name="ic_online">&#xf0eb;</string>
    <string name="ic_register_as_driver">&#xf1ba;</string>
    <string name="ic_language">&#xf1ab;</string>
    <string name="ic_phone">&#xf095;</string>
    <string name="ic_rate">&#xf012;</string>
    <string name="ic_menu">&#xe636;</string>
    <string name="ic_facebook">&#xf09a;</string>
    <string name="ic_google">&#xf0d5;</string>
    <string name="ic_search">&#xe618;</string>
    <string name="ic_note">&#xf0f6;</string>
    <string name="ic_dolar"> &#xf155;</string>
    <string name="ic_length">&#xf07e;</string>
    <string name="ic_blance">&#xf19c;</string>
    <string name="ic_point">&#xf1c4;</string>
    <string name="ic_save">&#xe65f;</string>
    <string name="ic_photo">&#xf03e;</string>
    <string name="ic_avatar">&#xf234;</string>
    <string name="ic_model">&#xf091;</string>
    <string name="ic_year">&#xf073;</string>
    <string name="ic_mail">&#xf003;</string>
    <string name="ic_add">&#xf041;</string>
    <string name="ic_des">&#xf05a;</string>
    <string name="ic_brand">&#xf000;</string>
    <string name="ic_money">&#xf0d6;</string>
    <string name="ic_logout">&#xf011;</string>
    <string name="ic_car">&#xf1b9;</string>
    <string name="ic_state">&#xf239;</string>
    <string name="ic_city">&#xf041;</string>
    <string name="lbl_enter_real_distance">Enter real distance (Km)</string>
    <string name="lbl_message_real_distance">Total</string>
    <string name="lbl_link1">1 seat avaiable (Link I)</string>
    <string name="lbl_link2">2 seat avaiable (Link II)</string>
    <string name="lbl_link3">3 seat avaiable (Link III)</string>
    <string name="lbl_request_link">Following requets has been sent</string>
    <string name="lbl_you_are_now_online">You are now online</string>
    <string name="lbl_waiting_for_request">You are waiting for customer requests</string>
    <string name="lbl_awaiting">awaiting for tasker confirmation</string>
    <string name="lbl_please">Please wait</string>
    <string name="estimateFare">*Estimated fare:</string>
    <string name="estFare">*Est Fare</string>
    <string name="pointEstimated">$100 ~ </string>
    <string name="lbl_please_wait_ten">(for demo please wait in 10 seconds)</string>
    <string name="btn_cancel_trip">CANCEL TASK</string>
    <string name="lblInfoInvalid">Infomation invalid</string>
    <string name="lblPayoutStripe">Payout Stripe</string>
    <string name="lbl_header_start_trip">your tasker is arrived</string>
    <string name="lbl_header_trip_online">Begin your task</string>
    <string name="ic_gps">&#xe6bb;</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_brand_car">Brand of car</string>
    <string name="lbl_year_manufacturer">Year manufacturer</string>
    <string name="lbl_model_car">Model of Car</string>
    <string name="lbl_header_trip_history">your tasker is detail task</string>
    <string name="lbl_trip_detail">your trip detail</string>
    <string name="lbl_header_driver_start_trip">Your tasker arrives</string>
    <string name="lbl_show_passenger">Please go ahead to your customer location</string>
    <string name="lbl_your_end_trip">Your task is end</string>
    <string name="lbl_rating">Rating tasker</string>
    <string name="lbl_rating_link">Rating</string>
    <string name="lbl_starting_location">Start</string>
    <string name="lbl_ending_location">End</string>
    <string name="lbl_starting_location2">25 Los Angeles, America </string>
    <string name="pe_7s_menu">&#xe636;</string>
    <string name="year">Year</string>
    <string name="lbl_request_by_passenger">REQUEST</string>
    <string name="card_number">Card Number</string>
    <string name="lblAlwayOnline">Always stay this screen while online</string>
    <string name="have_promocode"><u>Do you have any promo code?</u></string>
    <string name="enter_promo">Please enter promocode</string>
    <string name="month_year">Month/Year</string>
    <string name="month">Month</string>
    <string name="cvv">CVV Number</string>
    <string name="cvc">CVC</string>
    <string name="send">Send</string>
    <string name="have_promocode_only">Have promocode?</string>
    <string name="book_now">Book Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="apply">Apply</string>
    <string name="change_language">Change Language</string>
    <string name="arabic">Arabic</string>
</resources>