<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alaryani.aamrny.fragment.ChangeLanguageFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary">

        <com.alaryani.aamrny.widget.TextViewPixeden
            android:id="@+id/btnMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/pe_7s_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/space_large" />

        <com.alaryani.aamrny.widget.TextViewRaleway
            android:id="@+id/lblTitle"
            style="@style/Layout.WrapWidthHeight"
            android:layout_centerInParent="true"
            android:text="@string/change_language"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_bg"
        android:layout_margin="@dimen/margin_horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/margin_horizontal"
            android:src="@drawable/radio_un_select_seller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/lbl_english"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_bg"
        android:layout_margin="@dimen/margin_horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/margin_horizontal"
            android:src="@drawable/radio_un_select_seller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/arabic"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_width" />
    </LinearLayout>


    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal_xxlarge"
        android:layout_marginRight="@dimen/margin_horizontal_xxlarge"
        android:layout_marginTop="@dimen/space_normal"
        android:background="@color/primary"
        android:gravity="center"
        android:text="@string/lbl_update"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>
