<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/dummy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/have_promocode_only"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/edt_promo"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_below="@+id/dummy"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/enter_promo"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="16sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edt_promo"
            android:layout_marginTop="20dp"
            android:background="@color/gray3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/view1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/gray3"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="16sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/promo_code"
                android:layout_gravity="center_vertical"
                android:background="@color/gray3" />

            <TextView
                android:id="@+id/apply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>