<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/have_promocode_only"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/promo_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/have_promocode"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/promo_code"
            android:background="@color/gray3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/gray3"
                android:text="@string/cancel"
                android:textSize="16sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/promo_code"
                android:layout_gravity="center_vertical"

                android:background="@color/gray3" />

            <TextView
                android:id="@+id/book_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/book_now"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>